--- a/InspectorJournal/InspectorJournal.csproj
+++ b/InspectorJournal/InspectorJournal.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InspectorJournal.DataLayer\InspectorJournal.DataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
