Поменял строку подключения

--- a/InspectorJournal/appsettings.json
+++ b/InspectorJournal/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-InspectorJournal-e68d7382-7fd2-48fa-a1cd-3a6368a4d1ee;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=KENG;Database=InspectorJournalTEST;Integrated Security=true;Trusted_Connection=True;TrustServerCertificate=True;",
+    "IdentityConnection": "Server=KENG;Database=usersdbTEST;Integrated Security=true;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Parameters": {
+    "PageSize": "15"
   },
   "Logging": {
     "LogLevel": {
